fixed overlapping sidebar finally

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body {
 
 html {
 	scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -96,13 +97,13 @@ ol li::before {
 }
 
 .grid-container {
-	display: grid;
+	/*display: grid;*/
 	grid-template-columns: 1fr;
 }
 
 .item-sidebar {
 	font-size: .75rem;
-	position: absolute; 
+	position: absolute;
 	inset-inline-start: 0;
 	inset-block-start: 0;
 	transform: translatex(-100%);
@@ -120,17 +121,29 @@ ol li::before {
 		transform: translatex(0);
 		padding-block-start: 170px;
 	}	
-	
+
 	.item-sidebar {
 		position:fixed;
-		width: min(23%, 19rem); 
+		width: min(23%, 19rem);
 	}
 	
 	.item-main {
-		padding-inline-start: calc(15% + 1.5rem);
+		padding-inline-start: calc(5% + 15rem);
 		padding-inline-end: 1.5rem;
-	}
+	} 
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+header {
+  text-align: center;
+  font-size: 120%;
+}
+
+/*********************************************************************************************************************/
 
 pre {
   padding-top: 1%;
@@ -156,16 +169,20 @@ code {
   margin-right: 10%;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+/*********************************************************************************************************************/
+/*
+code {
+  background-color: #3a3b3c;
+  padding: 10px;
 }
 
-header {
-  text-align: center;
-  font-size: 120%;
+.codeinline {
+  background-color: #3a3b3c;
+  display: inline-block;
+  padding: 2px 10px;
 }
-
+*/
+/*********************************************************************************************************************/
 
 h2 {
   color: #bd9d30;
@@ -183,6 +200,7 @@ h5 {
   color: #bd9d30;
 }
 
+/*********************************************************************************************************************/
 
 a:link {
   color: #0cbe0c;
@@ -197,6 +215,7 @@ a:active {
   color: #80ff00;
 }
 
+/*********************************************************************************************************************/
 
 .dyeoperator {
   color: #dad181;
